--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,10 @@
             android:label="@string/app_name" >
         </activity>
         <activity
+            android:name="info.infosity.Milan.Vids2"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
             android:name="info.infosity.Milan.Atr"
             android:label="@string/app_name" >
         </activity>
